Fix: Scrollbar appearance.

--- a/frontend/src/stylesheet/garden/GardenPlanner.scss
+++ b/frontend/src/stylesheet/garden/GardenPlanner.scss
@@ -51,7 +51,7 @@
     .garden {
       overflow: auto;
       width: border-box;
-      max-height: 395px;
+      max-height: 405px;
 
       ////////////////////////
       // Scrollbar specific //
@@ -130,7 +130,7 @@
 
     .vegetable-list {
       height: 100%;
-      max-height: 395px;
+      max-height: 400px;
 
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(7.5vw, max-content));
